[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crashbytes-strutils"
version = "1.0.0"
description = "Zero-dependency string utilities — case conversion, slugify, masking, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "CrashBytes", email = "crashbytes@users.noreply.github.com" }]
keywords = ["string", "utilities", "slugify", "case-conversion", "text"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "mypy", "ruff"]

[project.urls]
Homepage = "https://github.com/CrashBytes/crashbytes-strutils"
Repository = "https://github.com/CrashBytes/crashbytes-strutils"
Issues = "https://github.com/CrashBytes/crashbytes-strutils/issues"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["crashbytes_strutils"]

[tool.coverage.report]
fail_under = 90
